--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input type = "text" name="fname"  placeholder = "Enter Usernmae">
         <br><br>
         <b>password:</b>
-        <input type = "password" name = "pass" placeholder = "Enter passwoerd">
+        <input type = "password" name = "pass" placeholder = "Enter passcode">
         <br><br>
         <input type = "checkbox" id = "check"> Remember me
         <br><br>
